# golem-backend

./: Procfile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/authentication/: admin.py  mails.py  managers.py  models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_remove_user_office_remove_user_sector.py  0003_alter_user_role.py
src/authentication/templates/: mail_reset_password.html
src/golem/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
src/hives/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/hives/migrations/: 0001_initial.py  0002_rename_hives_hive.py  0003_alter_hive_status.py  0004_remove_hive_description_hive_comments_collection.py  0005_alter_collection_hive.py  0006_alter_collection_hive.py  0007_hivesnapshot.py  0008_remove_hive_responsible_hive_q_ca_hive_q_cf_and_more.py  0009_alter_hive_q_ca_alter_hive_q_cf_alter_hive_q_ci_and_more.py  0010_historicalhive_historicalcollection.py  0011_remove_historicalhive_q_ci_remove_hive_q_ci_and_more.py
src/templates/: base.html
thunder-tests/: thunderActivity.json
