[tool.poetry]
name = "golem-backend"
version = "0.1.0"
description = ""
authors = ["Erick Medeiros <erick.medeiros.104@ufrn.edu.br>"]
readme = "README.md"
packages = [{include = "golem_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
django-model-utils = "^4.3.1"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^3.14.0"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"
django-heroku = "^0.3.1"
django-filter = "^23.3"
django-simple-history = "^3.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.255"

[tool.ruff]
src = ["src"]
line-length = 88

exclude = [
    "*/migrations/*",
    "manage.py",
]

select = [
    "F",
    "I",
    "N",
    "YTT",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "PL",
]

ignore = ["DJ001", "S107", "S106"]
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
